--- a/requirements (2).txt
+++ b/requirements (2).txt
@@ -2,7 +2,8 @@ streamlit
 langchain
 langchain-community
 langchain-openai
-openai
-pypdf
 faiss-cpu
+pypdf
 tiktoken
+openai
+sentence-transformers
