--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 streamlit
-langchain==0.2.12
-langchain-community==0.2.12
+langchain
+langchain-community
 langchain-openai
-faiss-cpu
-pypdf
-tiktoken
 openai
-sentence-transformers
+pypdf
+faiss-cpu
+tiktoken
