--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit
-langchain
-langchain-community
-langchain-openai
-openai
-pypdf
-faiss-cpu
-tiktoken
+streamlit==1.48.0
+langchain==0.3.27
+langchain-community==0.3.27
+langchain-openai==0.3.9
+openai==1.99.3
+pypdf==5.9.0
+faiss-cpu==1.11.0.post1
+tiktoken==0.10.0
